--- a/package.json
+++ b/package.json
@@ -1,23 +1,4 @@
 {
-  "name": "test_guru",
-  "version": "1.0.0",
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", "build": "webpack --config config/webpack/webpack.config.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shrek4495/TEST.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Shrek4495/TEST/issues"
-  },
-  "homepage": "https://github.com/Shrek4495/TEST#readme"
+  "name": "app",
+  "private": "true"
 }
